<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/check_btn"
        android:layout_width="206dp"
        android:layout_height="56dp"
        android:layout_marginBottom="120dp"
        android:background="#689F38 "
        android:onClick="clickScanFinger"
        android:text="@string/scan_check_btn"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:visibility="visible"/>
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.497"-->
        <!--app:layout_constraintStart_toStartOf="parent" />-->

    <android.support.v7.widget.Toolbar
        android:id="@+id/header-check"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#0288D1"
        tools:layout_editor_absoluteY="1dp">
        <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
        <!--android:elevation="4dp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->

        <TextView
            android:id="@+id/title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/header_txt"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="178dp"
            tools:layout_editor_absoluteY="22dp" />
            <!--android:textAppearance="@style/TextAppearance.AppCompat"-->

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/check_textView"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/check_def_txt"
        android:textColor="@android:color/black"
        android:textSize="26sp"/>
        <!--android:textAlignment="center"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.5"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/header-check" />-->

</android.support.constraint.ConstraintLayout>